<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".SplashScreen">

    <ImageView
        android:id="@+id/logo_splash_screen"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vector_logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/splash_screen_app_name"
        style="@style/AutoSizeTextStyle"
        android:layout_width="242dp"
        android:layout_height="50dp"
        android:layout_marginTop="296dp"
        android:text="@string/app_name"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/logo_splash_screen"
        app:layout_constraintStart_toStartOf="@+id/logo_splash_screen"
        app:layout_constraintTop_toTopOf="@+id/logo_splash_screen" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/slogan_splash_screen"
        style="@style/AutoSizeTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app_slogan"
        app:layout_constraintEnd_toEndOf="@+id/splash_screen_app_name"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/splash_screen_app_name"
        app:layout_constraintTop_toBottomOf="@+id/splash_screen_app_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/app_version_splash_screen"
        style="@style/AutoSizeTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="233dp"
        android:text="@string/app_version"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/slogan_splash_screen"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@+id/slogan_splash_screen"
        app:layout_constraintTop_toBottomOf="@+id/slogan_splash_screen"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>

