<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="319dp"
        android:layout_height="81dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo_activity_register"
            android:layout_width="88dp"
            android:layout_height="78dp"
            android:contentDescription="@string/app_slogan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/app_name_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/vector_logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/app_name_register"
            style="@style/AutoSizeTextStyle"
            android:layout_width="203dp"
            android:layout_height="37dp"
            android:layout_marginEnd="16dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/create_import_button_container_register"
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:layout_marginTop="220dp"
        android:elevation="100dp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/create_account_container"
            android:layout_width="240dp"
            android:layout_height="60dp"
            android:background="@drawable/radius"
            android:clickable="true"
            app:layout_constraintBottom_toTopOf="@+id/import_account_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/create_account_vector_register"
                android:layout_width="64dp"
                android:layout_height="58dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/add_circle" />

            <TextView
                android:id="@+id/create_account_text_register"
                style="@style/AutoSizeTextStyle"
                android:layout_width="110dp"
                android:layout_height="21dp"
                android:layout_marginStart="20dp"
                android:text="@string/create_account"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/create_account_vector_register"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/import_account_container"
            android:layout_width="240dp"
            android:layout_height="60dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/radius"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:circularflow_radiusInDP="20">

            <ImageView
                android:id="@+id/import_account_vector_register"
                android:layout_width="64dp"
                android:layout_height="58dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/import_circle" />

            <TextView
                android:id="@+id/import_account_text_register"
                style="@style/AutoSizeTextStyle"
                android:layout_width="110dp"
                android:layout_height="21dp"
                android:layout_marginStart="20dp"
                android:text="@string/import_account"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/import_account_vector_register"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>